--- a/hugo.toml
+++ b/hugo.toml
@@ -11,11 +11,11 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     name = "Muhammad Ali"
 
 [params]
-    brand = "M. Ali"                      # name of your site - appears in the sidebar
-    # brand_image = "/images/test.jpg"    # path to the image shown in the sidebar
-    # description = "Northeastern University" # Used as default meta description if not specified in front matter
-    dark_mode = true                      # optional - defaults to false
-    # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
+    brand = "M. Ali"                            # name of your site - appears in the sidebar
+    # brand_image = "/images/test.jpg"          # path to the image shown in the sidebar
+    # description = "Northeastern University"   # Used as default meta description if not specified in front matter
+    dark_mode = true                            # optional - defaults to false
+    # favicon = "favicon.png"                   # path to favicon (defaults to favicon.png)
 
     # MENU PLACEHOLDER
     # Menu dict keys:
@@ -38,7 +38,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     # email_url = "mailto://user@domain"
     # facebook_url = "https://facebook.com"
     # flickr_url = "https://flickr.com"
-    github_url = "https://github.com"
+    github_url = "https://github.com/mohummedalee"
     # gitlab_url = "https://gitlab.com"
     # instagram_url = "https://instagram.com"
     linkedin_url = "https://linkedin.com/ismuhammadali"
@@ -52,7 +52,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 
     # NOTE: If you don't want to use RSS, comment or delete the following lines
     # Adds an RSS icon to the end of the socials which links to {{ .Site.BaseURL }}/index.xml
-    rss_icon = true
+    rss_icon = false
     # Which section the RSS icon links to, defaults to all content. See https://gohugo.io/templates/rss/#section-rss
     rss_section = "posts"
 
@@ -105,6 +105,12 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
                                           # For this to work though og_image and brand_url must be a path inside the assets directory
                                           # e.g. /assets/images/site/og-image.png becomes images/site/og-image.png
     # publisher_icon = ""                 # path to publisher icon - defaults to favicon, used in schema
+
+# NOTE: If using Disqus as commenting engine, uncomment and configure this line
+[config.services]
+    disqus = [
+        {shortname = "yourDisqusShortname"},        
+    ]
 
 [taxonomies]
     series = 'series'
