--- a/hugo.toml
+++ b/hugo.toml
@@ -41,7 +41,7 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     github_url = "https://github.com/mohummedalee"
     # gitlab_url = "https://gitlab.com"
     # instagram_url = "https://instagram.com"
-    linkedin_url = "https://linkedin.com/ismuhammadali"
+    linkedin_url = "https://linkedin.com/in/ismuhammadali"
     # mastodon_url = "https://mastodon.social"
     # matrix_url = "https://matrix.org"
     # telegram_url = "https://telegram.org"
