added google scholar to sidebar

--- a/hugo.toml
+++ b/hugo.toml
@@ -34,11 +34,12 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
 
     # Links to your socials.  Comment or delete any you don't need/use. 
     cv_url = "/cv.pdf"
+    scholar_url = "https://scholar.google.com/citations?user=pLeu3X0AAAAJ"
     # discord_url = "https://discord.com"
     # email_url = "mailto://user@domain"
     # facebook_url = "https://facebook.com"
     # flickr_url = "https://flickr.com"
-    github_url = "https://github.com/mohummedalee"
+    github_url = "https://github.com/mohummedalee"    
     # gitlab_url = "https://gitlab.com"
     # instagram_url = "https://instagram.com"
     linkedin_url = "https://linkedin.com/in/ismuhammadali"
